Document process.